--- a/implementation.tex
+++ b/implementation.tex
@@ -7,11 +7,11 @@
 
 	Τα επίπεδα που χρησιμοποιούνται στο σχήμα είναι τα εξής:
 	\begin{itemize}
-	\item Επίπεδο Βάσης Δεδομένων (Database layer). Αποτελώντας το βασικότερο επίπεδο του σύστηματος, στο επίπεδο αυτό τηρείται το σύνολο των επιχειρησιακών δεδομένων αλλά και των βοηθητικών αρχείων για την εύρυθμη λειτουργία των εφαρμογών του συστήματος.
+	\item Επίπεδο Βάσης Δεδομένων (Database layer). Αποτελώντας το βασικότερο επίπεδο του συστήματος, στο επίπεδο αυτό τηρείται το σύνολο των επιχειρησιακών δεδομένων αλλά και των βοηθητικών αρχείων για την εύρυθμη λειτουργία των εφαρμογών του συστήματος.
 	
 	\item  Επίπεδο Επιχειρησιακής Λογικής (Bussiness logic layer). Αποτελεί το κύριο τμήμα του λογισμικού, στο οποίο εκτελούνται οι περισσότερες λειτουργίες, εκτός εκείνων που σχετίζονται με τη διαμόρφωση των οθονών εργασίας. Στο επίπεδο αυτό διαμορφώνεται η επιχειρησιακή λογική ώστε να παραμετροποιείται το σύστημα με βάση τις ανάγκες λειτουργίας του φορέα.
 	
-	\item Επίπεδο Παρουσίασης ( Presentation layer). To τρίτο επίπεδο του λογισμικού αποτελεί τη επαφή του χρήστη με το σύστημα (User Interface). Στο επίπεδο αυτό, πραγματοποιείται η διαχείριση των Οθονών Εργασίας (User Screens) καθώς επίσης και η μορφοποίηση των δεδομένων που εμφανίζονται. Το προτεινόμενο σύστημα βασίζεται στις τεχνολογίες WEB και στις τεχνολογίες παρουσίασης του Android.
+	\item Επίπεδο Παρουσίασης ( Presentation layer). Το τρίτο επίπεδο του λογισμικού αποτελεί την επαφή του χρήστη με το σύστημα (User Interface). Στο επίπεδο αυτό, πραγματοποιείται η διαχείριση των Οθονών Εργασίας (User Screens) καθώς επίσης και η μορφοποίηση των δεδομένων που εμφανίζονται. Το προτεινόμενο σύστημα βασίζεται στις τεχνολογίες WEB και στις τεχνολογίες παρουσίασης του Android.
 	
 	\end{itemize}
 
@@ -87,7 +87,7 @@
 	\subsection*{Μηχανή δημιουργίας προτύπων - Μοντέλο εφαρμογής }
 
 		Έχουμε υλοποιήσει μοντέλο Model View Controller (MVC). Αυτό πρακτικά σημαίνει ότι έχουμε χωρίσει την εφαρμογή μας σε τρεις διαφορετικούς φακέλους  ./Views, ./Models, ./Controllers . Κάθε οθόνη έχει το αντίστοιχο view και κάθε view ελέγχεται από τον αντίστοιχο controller.  
-		Η εφαρμογή μας χρησιμοποιεί την μηχανή δημιουργίας προτύπων Jade Template Engine. Ακολουθεί ο κώδικας αρχικοποίησης της Jade.
+		Η εφαρμογή μας χρησιμοποιεί την μηχανή δημιουργίας προτύπων Jade Template Engine. Ακολουθεί ο κώδικας αρχικοποίησης της μηχανής προτύπων Jade.
 		
 		\begin{lstlisting}[language=Javascript]			
 		
@@ -96,7 +96,7 @@
 	
 		\end{lstlisting}
 		
-	Η μηχανή προτύπων Jade μας παρέχει την εξής λειτουργικότητα την οποία και αξιοποιήσαμε: Το Jade δίνει την δυνατότητα να δημιουργηθεί ένα βασικό View και στην συνέχεια κάνοντας το extend και συμπληρώνοντας κώδικα μόνο για τα  επιπλέον τμήματα που θέλουμε να εμφανίσουμε - υλοποιήσουμε να αναπτυχθούν τα υπόλοιπα Views. Αυτό είχε ως αποτέλεσμα να αποφύγουμε την επαναληψιμότητα του κώδικα, να έχουμε καλύτερη δομή και οργάνωση και λιγότερο χρόνο ανάπτυξης της εφαρμογής. Οι οθόνες μας χρησιμοποιούν NavigationBar. Δημιουργήσαμε ένα βασικό NavigationBarView, το οποίο παρατίθεται στην συνέχεια και κάνοντας το extend αναπτύξαμε τις υπόλοιπες οθόνες.
+	Η μηχανή προτύπων Jade μας παρέχει την εξής λειτουργικότητα την οποία και αξιοποιήσαμε: Το Jade δίνει τη δυνατότητα να δημιουργηθεί ένα βασικό View και στη συνέχεια κάνοντας το extend και συμπληρώνοντας κώδικα μόνο για τα  επιπλέον τμήματα που θέλουμε να εμφανίσουμε - υλοποιήσουμε να αναπτυχθούν τα υπόλοιπα Views. Αυτό είχε ως αποτέλεσμα να αποφύγουμε την επαναληψιμότητα του κώδικα, να έχουμε καλύτερη δομή και οργάνωση και λιγότερο χρόνο ανάπτυξης της εφαρμογής. Οι οθόνες μας χρησιμοποιούν NavigationBar. Δημιουργήσαμε ένα βασικό NavigationBarView, το οποίο παρατίθεται στην συνέχεια και κάνοντας το extend αναπτύξαμε τις υπόλοιπες οθόνες.
 	
 	\begin{lstlisting}[language=Javascript]			
 	
@@ -175,14 +175,12 @@
 
 		
 	\subsection{Οθόνες}
-	
-		Για τις ανάγκες λειτουργίας του συστήματος, μελετήθηκαν προσεκτικά και αξιολογήθηκαν οι αναγκαίες βασικές καρτέλες και τα μενού τα οποία κατ 'ελάχιστον θα πρέπει να διαθέτει το σύστημα ώστε να καλύπτει τις ανάγκες λειτουργίας του σε φορείς παροχής υπηρεσιών υγείας. Το σύστημα λοιπόν προτείνεται να απαρτίζεται από τις παρακάτω βασικές καρτέλες και μενού:
 
 		Στην συνέχεια παρουσιάζονται ενδεικτικά οι βασικές οθόνες λειτουργίας που διαθέτει το σύστημα μας για να καλύπτει τις λειτουργικές απαιτήσεις που αναφέρθηκαν στην ενότητα \ref{sec:Functional_Requirements}. Παρακάτω θα μελετήσουμε κάποιες ενδεικτικές οθόνες καθώς και τις λειτουργικότητες που παρέχουν, της διαδικτυακής εφαρμογής του υπολογιστικού νέφους από την πλευρά των εγκεκριμένων χρηστών/διαχειριστών των νοσοκομείων - κέντρων αιμοδοσίας. 
 	
 		\subsubsection{Register}
 		
-		Η οθόνη Register υλοποιείται με ένα View (RegisterView) και έναν Controller(RegisterController). Για την εμφάνιση του RegisterView χρησιμοποιείται ένα κατάλληλα προσαρμοσμένο css βασισμένο στο bootstrap framework. Αρχικά εμφανίζεται μία λίστα από όλα τα νοσοκομεία και τα κέντρα αιμοδοσίας, τα οποία κατά την φόρτωση της φόρμας ανακτώνται από την βάση δεδομένων. O RegisterViewController είναι ο χειριστής της όλης διαδικασίας. Μόλις λάβουμε ένα αίτημα GET :
+		Η οθόνη Register υλοποιείται με ένα View (RegisterView) και έναν Controller(RegisterController). Για την εμφάνιση του RegisterView χρησιμοποιείται ένα κατάλληλα προσαρμοσμένο css βασισμένο στο bootstrap framework. Αρχικά εμφανίζεται μία λίστα από όλα τα νοσοκομεία και τα κέντρα αιμοδοσίας, τα οποία κατά τη φόρτωση της φόρμας ανακτώνται από την βάση δεδομένων. O RegisterViewController είναι ο χειριστής της όλης διαδικασίας. Μόλις λάβουμε ένα αίτημα GET :
 		
 		\begin{lstlisting}[language=Javascript]			
 		
@@ -194,7 +192,7 @@
 		\end{lstlisting}
 		
 
-μεταβαίνουμε στον RegisterController ο οποίος χειρίζεται το αίτημα. Με την κλήση κατάλληλης συνάρτησης της αντίστοιχης κλάσης του μοντέλου, λαμβάνει τα δεδομένα και στην συνέχεια καλεί το RegisterView , περνώντας τα ζητούμενα δεδομένα σαν όρισμα.
+μεταβαίνουμε στον RegisterController ο οποίος χειρίζεται το αίτημα. Με την κλήση κατάλληλης συνάρτησης της αντίστοιχης κλάσης του μοντέλου, λαμβάνει τα δεδομένα και στη συνέχεια καλεί το RegisterView, περνώντας τα ζητούμενα δεδομένα σαν όρισμα.
 
 
 
@@ -209,7 +207,7 @@
 		\end{lstlisting}
 
 
-	Για την παρουσίαση των δεδομένων στην λίστα καθώς και την επιστροφή της επιλογής του χρήστη χρησιμοποιήθηκε το framework AngularJS. Έπειτα θα πρέπει να συμπληρωθεί μία φόρμα με τα στοιχεία τού διαχειριστή του νοσοκομείου που εκπροσωπείται. Αυτά αφορούν στο όνομα, στο επώνυμο, στον αριθμό αστυνομικής ταυτότητας ή διαβατηρίου, στο σταθερό τηλέφωνο, στο κινητό τηλέφωνο και στο e-mail. Ο χρήστης δημιουργεί τα αναγνωριστικά εισόδου (όνομα χρήστη και κωδικό πρόσβασης) και επιλέγει εγγραφή.  Τα στοιχεία που εισήγαγε ο χρήστης επιστρέφονται στον RegisterController, οπού καλείται η κατάλληλη συνάρτηση της αντίστοιχης κλάσης του μοντέλου για να εισαχθούν στην βάση δεδομένων.
+	Για την παρουσίαση των δεδομένων στην λίστα καθώς και την επιστροφή της επιλογής του χρήστη χρησιμοποιήθηκε το framework AngularJS. Έπειτα θα πρέπει να συμπληρωθεί μία φόρμα με τα στοιχεία τού διαχειριστή του νοσοκομείου που εκπροσωπείται. Αυτά αφορούν στο όνομα, στο επώνυμο, στον αριθμό αστυνομικής ταυτότητας ή διαβατηρίου, στο σταθερό τηλέφωνο, στο κινητό τηλέφωνο και στο e-mail. Ο χρήστης δημιουργεί τα αναγνωριστικά εισόδου (όνομα χρήστη και κωδικό πρόσβασης) και επιλέγει εγγραφή.  Τα στοιχεία που εισήγαγε ο χρήστης επιστρέφονται στον RegisterController, οπού καλείται η κατάλληλη συνάρτηση της αντίστοιχης κλάσης του μοντέλου για να εισαχθούν στη βάση δεδομένων.
 	
 	
 		\subsubsection{Login}
@@ -244,7 +242,7 @@
 		
 				\subsubsection{Home Page - Donation Events}
 		
-	Η οθόνη αυτή υλοποιείται με ένα View (HomePageView) και έναν Controller(HomePageController).  O HomePageController είναι ο χειριστής της όλης διαδικασίας. Κατά την φόρτωση της σελίδας εμφανίζονται όλα τα γεγονότα αιμοδοσίας του νοσοκομείου. Στο πάνω μέρος εμφανίζεται η λίστα με όλες τις ενεργές αιμοδοσίες και από κάτω εμφανίζεται μία λίστα με το ιστορικό όλων των αιμοδοσιών που έχουν γίνει στο συγκεκριμένο ιατρικό κέντρο. Μόλις λάβουμε ένα αίτημα GET :
+	Η οθόνη αυτή υλοποιείται με ένα View (HomePageView) και έναν Controller(HomePageController).  O HomePageController είναι ο χειριστής της όλης διαδικασίας. Κατά τη φόρτωση της σελίδας εμφανίζονται όλα τα γεγονότα αιμοδοσίας του νοσοκομείου. Στο πάνω μέρος εμφανίζεται η λίστα με όλες τις ενεργές αιμοδοσίες και από κάτω εμφανίζεται μία λίστα με το ιστορικό όλων των αιμοδοσιών που έχουν γίνει στο συγκεκριμένο ιατρικό κέντρο. Μόλις λάβουμε ένα αίτημα GET :
 		
 		\begin{lstlisting}[language=Javascript]			
 		
@@ -255,7 +253,7 @@
 
 		\end{lstlisting}
 		
-μεταβαίνουμε στον RegisterController ο οποίος χειρίζεται το αίτημα. Με την κλήση κατάλληλης συνάρτησης της αντίστοιχης κλάσης του μοντέλου, λαμβάνει τα δεδομένα,  και στην συνέχεια καλεί το HomePageView , περνώντας τα ζητούμενα δεδομένα σαν όρισμα.
+μεταβαίνουμε στον RegisterController ο οποίος χειρίζεται το αίτημα. Με την κλήση κατάλληλης συνάρτησης της αντίστοιχης κλάσης του μοντέλου, λαμβάνει τα δεδομένα,  και στη συνέχεια καλεί το HomePageView , περνώντας τα ζητούμενα δεδομένα σαν όρισμα.
 
 
 
@@ -295,7 +293,7 @@
 
 		\end{lstlisting}
 		
-μεταβαίνουμε στον RequestsController ο οποίος χειρίζεται το αίτημα. Με την κλήση κατάλληλης συνάρτησης της αντίστοιχης κλάσης του μοντέλου, λαμβάνει τα δεδομένα,  και στην συνέχεια καλεί το RequestsView , περνώντας τα ζητούμενα δεδομένα σαν όρισμα.
+μεταβαίνουμε στον RequestsController ο οποίος χειρίζεται το αίτημα. Με την κλήση κατάλληλης συνάρτησης της αντίστοιχης κλάσης του μοντέλου, λαμβάνει τα δεδομένα,  και στη συνέχεια καλεί το RequestsView , περνώντας τα ζητούμενα δεδομένα σαν όρισμα.
 
 
 
@@ -325,7 +323,7 @@
 	
 				\subsubsection{Donation Completion}
 		
-	Η οθόνη αυτή υλοποιείται με ένα View (CompletionView) και έναν Controller(CompletionController). O CompletionController είναι ο χειριστής της όλης διαδικασίας. Κατά την φόρτωση της σελίδας εμφανίζονται όλοι οι χρήστες οι οποίοι έχουν δώσει αίμα ή έχουν κλείσει ραντεβού για να δώσουν αίμα στο συγκεκριμένο γεγονός αιμοδοσίας. Στο πάνω μέρος εμφανίζεται η λίστα με τους εθελοντές που έχουν κλείσει ραντεβού να δώσουν αίμα και από κάτω εμφανίζεται μία λίστα με τα στοιχεία των εθελοντών που έχουν πραγματοποιήσει ήδη αιμοδοσία. Μόλις λάβουμε ένα αίτημα GET :
+	Η οθόνη αυτή υλοποιείται με ένα View (CompletionView) και έναν Controller(CompletionController). O CompletionController είναι ο χειριστής της όλης διαδικασίας. Κατά τη φόρτωση της σελίδας εμφανίζονται όλοι οι χρήστες οι οποίοι έχουν δώσει αίμα ή έχουν κλείσει ραντεβού για να δώσουν αίμα στο συγκεκριμένο γεγονός αιμοδοσίας. Στο πάνω μέρος εμφανίζεται η λίστα με τους εθελοντές που έχουν κλείσει ραντεβού να δώσουν αίμα και από κάτω εμφανίζεται μία λίστα με τα στοιχεία των εθελοντών που έχουν πραγματοποιήσει ήδη αιμοδοσία. Μόλις λάβουμε ένα αίτημα GET :
 		
 		\begin{lstlisting}[language=Javascript]			
 		
@@ -346,7 +344,7 @@
 				
 		\end{lstlisting}
 		
-		Ο χρήστης καλείται να συμπληρώσει το ΑΜΚΑ του εθελοντή και να κάνει έλεγχο καταλληλότητας. Το σύστημα ξεκινάει να τρέχει το Eligibility as a Service, και επιστρέφει απάντηση ναι η όχι. Ο RequestsController ανάλογα με την απάντηση ενεργοποιεί ή όχι την δυνατότητα να ολοκληρωθεί αιμοδοσία από τον συγκεκριμένο εθελοντή. 
+		Ο χρήστης καλείται να συμπληρώσει το ΑΜΚΑ του εθελοντή και να κάνει έλεγχο καταλληλότητας. Το σύστημα ξεκινάει να τρέχει το Eligibility as a Service, και επιστρέφει απάντηση ναι η όχι. Ο RequestsController ανάλογα με την απάντηση ενεργοποιεί ή όχι τη δυνατότητα να ολοκληρωθεί αιμοδοσία από τον συγκεκριμένο εθελοντή. 
 		
 		
 		
@@ -377,14 +375,14 @@
 		\end{lstlisting}
 
 
-	Στην συνέχεια θα πρέπει να συμπληρωθεί μία φόρμα με τα στοιχεία του γεγονότος αιμοδοσίας. Αυτά αφορούν στην ονομασία της, στην ποσότητα αίματος, στις συγκεκριμένες απαιτήσεις αν υπάρχουν (π.χ. συγκεκριμένη ομάδα αίματος ), στο χρονικό διάστημα διεξαγωγής της αιμοδοσίας και στα διαθέσιμα ραντεβού. Τα στοιχεία που εισήγαγε ο χρήστης επιστρέφονται στον CreateDonationController, οπού καλείται η κατάλληλη συνάρτηση της αντίστοιχης κλάσης του μοντέλου για να εισαχθούν στην βάση δεδομένων. Στην συνέχεια τρέχει το Notification as a Service, το οποίο στέλνει τα κατάλληλα push notifications στους εθελοντες αιμοδότες.
+	Στη συνέχεια θα πρέπει να συμπληρωθεί μία φόρμα με τα στοιχεία του γεγονότος αιμοδοσίας. Αυτά αφορούν στην ονομασία της, στην ποσότητα αίματος, στις συγκεκριμένες απαιτήσεις αν υπάρχουν (π.χ. συγκεκριμένη ομάδα αίματος ), στο χρονικό διάστημα διεξαγωγής της αιμοδοσίας και στα διαθέσιμα ραντεβού. Τα στοιχεία που εισήγαγε ο χρήστης επιστρέφονται στον CreateDonationController, οπού καλείται η κατάλληλη συνάρτηση της αντίστοιχης κλάσης του μοντέλου για να εισαχθούν στη βάση δεδομένων. Στη συνέχεια τρέχει το Notification as a Service, το οποίο στέλνει τα κατάλληλα push notifications στους εθελοντες αιμοδότες.
 		
 		
 		
 		
 						\subsubsection{Appointment Management}
 		
-	Η οθόνη αυτή υλοποιείται με ένα View (AppointmentView) και έναν Controller(AppointmentController). Κατά την φόρτωση της σελίδας εμφανίζονται όλα τα ραντεβού αιμοδοσίας του νοσοκομείου. O AppointmentController είναι ο χειριστής της όλης διαδικασίας. Μόλις λάβουμε ένα αίτημα GET :
+	Η οθόνη αυτή υλοποιείται με ένα View (AppointmentView) και έναν Controller(AppointmentController). Κατά τη φόρτωση της σελίδας εμφανίζονται όλα τα ραντεβού αιμοδοσίας του νοσοκομείου. O AppointmentController είναι ο χειριστής της όλης διαδικασίας. Μόλις λάβουμε ένα αίτημα GET :
 		
 		\begin{lstlisting}[language=Javascript]			
 		
@@ -411,16 +409,16 @@
 		Ο χρήστης μπορεί να επιλέξει ένα ραντεβού και να δει αναλυτικά περαιτέρω πληροφορίες, όπως το γεγονός της αιμοδοσίας και  τα στοιχεία του εθελοντή αιμοδότη καθώς και:
 		
 		\begin{itemize}
-		\item Έχει την επιλογή 'Ακύρωση', με την οποία ακυρώνει το ραντεβού, εισάγοντας την αιτιολογία για αυτή την ενέργεια ή οποία κοινοποιείται και στον εθελοντή αιμοδότη.
+		\item Έχει την επιλογή 'Ακύρωση', με την οποία ακυρώνει το ραντεβού, εισάγοντας την αιτιολογία για αυτή την ενέργεια, η οποία κοινοποιείται και στον εθελοντή αιμοδότη.
 		
-		\item Έχει την επιλογή 'Μετάθεση' με την οποία μεταθέτει χρονικά ένα ραντεβού, η οποία ολοκληρώνεται ύστερα από συναίνεση του εθελοντή αιμοδότη.		
+		\item Έχει την επιλογή 'Μετάθεση' με την οποία μεταθέτει χρονικά ένα ραντεβού. Η μετάθεση ολοκληρώνεται ύστερα από συναίνεση του εθελοντή αιμοδότη.		
 		\end{itemize}
 
 		
 
 		\subsubsection{Supplies Management}
 		
-	Η οθόνη αυτή υλοποιείται με ένα View (SuppliesView) και έναν Controller(SuppliesController). Κατά την φόρτωση της σελίδας εμφανίζεται ένας πίνακας ο οποίος περιέχει τις βασικές κατηγορίες των παραγώγων του αίματος (ΣΕ, Αιμοπετάλια(κοινά), Αιμοπετάλια, FFP, Κοινό πλάσμα) και την ποσότητα που υπάρχει διαθέσιμη για την κάθε κατηγορία σε κάθε ομάδα αίματος (0+, 0-, ΑΒ+, ΑΒ-,Α+,Α-,Β+,Β-). O SuppliesController είναι ο χειριστής της όλης διαδικασίας. Μόλις λάβουμε ένα αίτημα GET :
+	Η οθόνη αυτή υλοποιείται με ένα View (SuppliesView) και έναν Controller(SuppliesController). Κατά τη φόρτωση της σελίδας εμφανίζεται ένας πίνακας ο οποίος περιέχει τις βασικές κατηγορίες των παραγώγων του αίματος (ΣΕ, Αιμοπετάλια(κοινά), Αιμοπετάλια, FFP, Κοινό πλάσμα) και την ποσότητα που υπάρχει διαθέσιμη για την κάθε κατηγορία σε κάθε ομάδα αίματος (0+, 0-, ΑΒ+, ΑΒ-,Α+,Α-,Β+,Β-). O SuppliesController είναι ο χειριστής της όλης διαδικασίας. Μόλις λάβουμε ένα αίτημα GET :
 		
 		\begin{lstlisting}[language=Javascript]			
 		
@@ -431,7 +429,7 @@
 
 		\end{lstlisting}
 		
-μεταβαίνουμε στον SuppliesController ο οποίος χειρίζεται το αίτημα. Με την κλήση κατάλληλης συνάρτησης της αντίστοιχης κλάσης του μοντέλου, λαμβάνει τα δεδομένα των διαθέσιμων ποσοτήτων,  και στην συνέχεια καλεί το SuppliesView , περνώντας τα ζητούμενα δεδομένα σαν όρισμα.
+μεταβαίνουμε στον SuppliesController ο οποίος χειρίζεται το αίτημα. Με την κλήση κατάλληλης συνάρτησης της αντίστοιχης κλάσης του μοντέλου, λαμβάνει τα δεδομένα των διαθέσιμων ποσοτήτων,  και στη συνέχεια καλεί το SuppliesView , περνώντας τα ζητούμενα δεδομένα σαν όρισμα.
 
 
 
@@ -459,7 +457,7 @@
 	
    		\subsubsection{Σύνδεση στην εφαρμογή - Login}
    		
-   		Η οθόνη σύνδεσης στο σύστημα υλοποιείται μέσω ενός LoginActivity και ενός LoginPresenter ο οποίος το συνοδεύει. Όπως δείξαμε και στο σχήμα \ref{fig:android_mvp_example_class_diagram}, ο LoginPresenter γίνεται inject στο LoginActivity και το LoginView (το οποίο υλοποιείται από το LoginActivity) γίνεται inject στον LoginPresenter αντίστοιχα. Μόλις ο χρήστης συμπληρώσει τα στοιχεία του και κάνει tap στο κουμπί σύνδεσης, το LoginActivity ``περνάει" τα διαπιστευτήρια στον LoginPresenter ο οποίος αρχικώς τα ελέγχει για να εξακριβώσει την ορθότητα τους. Σε περίπτωση προβλήματος ως προς την ορθότητα ο LoginPresenter λέει στο LoginActivity τι μήνυμα λάθους θα πρέπει να δείξει στον χρήστη. Σε περίπτωση που δεν υπάρχει πρόβλημα ορθότητας, επικοινωνεί με το μοντέλο για να κάνει ταυτοποίηση του χρήστη. Τέλος ο LoginPresenter ενημερώνει το LoginActivity το οποίο με την σειρά του ενημερώνει τον χρήστη με κατάλληλο μήνυμα. 
+   		Η οθόνη σύνδεσης στο σύστημα υλοποιείται μέσω ενός LoginActivity και ενός LoginPresenter ο οποίος το συνοδεύει. Όπως δείξαμε και στο σχήμα \ref{fig:android_mvp_example_class_diagram}, ο LoginPresenter γίνεται inject στο LoginActivity και το LoginView (το οποίο υλοποιείται από το LoginActivity) γίνεται inject στον LoginPresenter αντίστοιχα. Μόλις ο χρήστης συμπληρώσει τα στοιχεία του και κάνει tap στο κουμπί σύνδεσης, το LoginActivity ``περνάει" τα διαπιστευτήρια στον LoginPresenter ο οποίος αρχικώς τα ελέγχει για να εξακριβώσει την ορθότητα τους. Σε περίπτωση προβλήματος ως προς την ορθότητα ο LoginPresenter λέει στο LoginActivity τι μήνυμα λάθους θα πρέπει να δείξει στον χρήστη. Σε περίπτωση που δεν υπάρχει πρόβλημα ορθότητας, επικοινωνεί με το μοντέλο για να κάνει ταυτοποίηση του χρήστη. Τέλος ο LoginPresenter ενημερώνει το LoginActivity το οποίο με τη σειρά του ενημερώνει τον χρήστη με κατάλληλο μήνυμα. 
    		
    		Παρακάτω βλέπουμε ενδεικτικά την κλήση του Presenter από το Activity:
    		\lstinputlisting[language=Java]{attempt_login.java}
@@ -473,7 +471,7 @@
 
 		
 
-   		Η οθόνη εγγραφής στο σύστημα υλοποιείται μέσω ενός RegisterActivity και ενός RegisterPresenter ο οποίος το συνοδεύει. Ο RegisterPresenter γίνεται inject στο RegisterActivity και το RegisterView (το οποίο υλοποιείται από το RegisterActivity) γίνεται inject στον RegisterPresenter αντίστοιχα. Μόλις ο χρήστης συμπληρώσει τα απαραιτητά για την εγγραφή του στοιχεία (ΑΜΚΑ) και κάνει tap στο κουμπί εγγραφής, το RegisterActivity καλεί τον RegisterPresenter ο οποίος αρχικώς τα ελέγχει για να εξακριβώσει την ορθότητα τους. Με βάση τα στοιχεία εγγραφής, ανοίγει ασφαλή δίαυλο επικοινωνίας με τη βάση δεδομένων της ΗΔΙΚΑ και "τραβάει" τα στοιχεία του χρήστη και στην συνέχεια επικοινωνεί με το κατάλληλο model, το οποίο θα περάσει τα στοιχεία στην βάση δεδομένων στο υπολογιστικό νέφος (cloud computing). Τέλος, ο RegisterPresenter λέει στο RegisterActivity να εμφανίσει το κατάλληλο μήνυμα στον χρήστη.
+   		Η οθόνη εγγραφής στο σύστημα υλοποιείται μέσω ενός RegisterActivity και ενός RegisterPresenter ο οποίος το συνοδεύει. Ο RegisterPresenter γίνεται inject στο RegisterActivity και το RegisterView (το οποίο υλοποιείται από το RegisterActivity) γίνεται inject στον RegisterPresenter αντίστοιχα. Μόλις ο χρήστης συμπληρώσει τα απαραιτητά για την εγγραφή του στοιχεία (ΑΜΚΑ) και κάνει tap στο κουμπί εγγραφής, το RegisterActivity καλεί τον RegisterPresenter ο οποίος αρχικώς τα ελέγχει για να εξακριβώσει την ορθότητα τους. Με βάση τα στοιχεία εγγραφής, ανοίγει ασφαλή δίαυλο επικοινωνίας με τη βάση δεδομένων της ΗΔΙΚΑ και "τραβάει" τα στοιχεία του χρήστη και στην συνέχεια επικοινωνεί με το κατάλληλο model, το οποίο θα περάσει τα στοιχεία στη βάση δεδομένων που βρίσκεται στο υπολογιστικό νέφος (cloud computing). Τέλος, ο RegisterPresenter λέει στο RegisterActivity να εμφανίσει το κατάλληλο μήνυμα στον χρήστη.
    
    		
    		Παρακάτω βλέπουμε ενδεικτικά την κλήση του Presenter από το Activity:
@@ -531,7 +529,7 @@
 
    		Η οθόνη εμφάνισης του ιστορικού αιμοδοσίας υλοποιείται μέσω ενός DonationsHistoryActivity και ενός DonationsHistoryPresenter ο οποίος το συνοδεύει. O χρήστης βλέπει μια λίστα από τις αιμοδοσίες τις οποίες έχει συμμετάσχει και έχει τη δυνατότητα με tap να δει επιπλέον πληροφορίες. 
    
-   		Παρακάτω βλέπουμε ενδεικτικά την κλήση του Presenter από το Activity καθώς και την συνάρτηση που καλείται όταν ο χρήστης κάνει tap σε κάποια αιμοδοσία:
+   		Παρακάτω βλέπουμε ενδεικτικά την κλήση του Presenter από το Activity καθώς και τη συνάρτηση που καλείται όταν ο χρήστης κάνει tap σε κάποια αιμοδοσία:
    			
    			
    	\begin{lstlisting}[language=Java]			
@@ -551,7 +549,7 @@
 	 	 
 	\subsection{Λήψη ειδοποίησης(push notification)}	
 
-		Ο χρήστης λαμβάνει την ειδοποίηση (push notification), την ανοίγει και ξεκινά το DonationRequestDetailsActivity. Παρακάτω βλέπουμε ενδεικτικά την συνάρτηση που παίρνει τα δεδομένα από το push notification για να τα εμφανίσει στο DonationRequestActivity:
+		Ο χρήστης λαμβάνει την ειδοποίηση (push notification), την ανοίγει και ξεκινά το DonationRequestDetailsActivity. Παρακάτω βλέπουμε ενδεικτικά τη συνάρτηση που παίρνει τα δεδομένα από το push notification για να τα εμφανίσει στο DonationRequestActivity:
    			
    			
    	\begin{lstlisting}[language=Java]			
@@ -580,7 +578,7 @@
 	
 	\subsection{Android Application Testing}
 	
-	Στο παρόν κεφάλαιο θα αναφερθούμε αρχικά στο περιβάλλον ελέγχου που μας παρέχει το Android καθώς και στους διαφορετικού τύπους ελέγχου που μπορούμε να εκτελέσουμε. Στην συνέχεια θα αναφερθούμε στους ελέγχους που πραγματοποιήσαμε καθώς και στα αποτελέσματα τους.
+	Στο παρόν κεφάλαιο θα αναφερθούμε αρχικά στο περιβάλλον ελέγχου που μας παρέχει το Android καθώς και στους διαφορετικού τύπους ελέγχου που μπορούμε να εκτελέσουμε. Στη συνέχεια θα αναφερθούμε στους ελέγχους που πραγματοποιήσαμε καθώς και στα αποτελέσματα τους.
 	
 	Η δυνατότητα αυτοματοποιημένου έλεγχου των εφαρμογών του λειτουργικού Android είναι ιδιαίτερα σημαντική λόγω του μεγάλου αριθμού διαφορετικών συσκευών που υπάρχουν στην αγορά. Είναι αδύνατον να δοκιμάσουμε για μία εφαρμογή όλες τις δυνατές ρυθμίσεις μιας συσκευής, για αυτό αποτελεί συνηθισμένη πρακτική η εκτέλεση δοκιμών με βάση τις πιο συνηθισμένες ρυθμίσεις. Στόχος είναι η επίτευξη ενός υψηλού ποσοστού κάλυψης δοκιμών (test coverage), έτσι ώστε να παράγουμε μια εφαρμογή απαλλαγμένη από σημαντικά σφάλματα αλλά και να διευκολύνουμε την συντήρηση και επέκτασή της στο μέλλον.
 	
@@ -589,14 +587,14 @@
 	\begin{figure}[h]
 	    \centering
 	    \includegraphics[width=0.7\textwidth]{categories_of_android_tests.png}
-	    \caption{ Κατηγορίες δοκιμών στο Android}
+	    \caption{ Κατηγορίες δοκιμών στο Android.}
 	    \label{fig:categories_of_android_tests}
 	\end{figure}
 	
 	Εφόσον είναι εφικτό, είναι πάντα προτιμότερο να τρέχουμε τις δοκιμές στην εικονική μηχανή της Java, δεδομένου ότι απαιτεί πολύ λιγότερο χρόνο σε σχέση με το χρόνο που απαιτείται για την εγκατάσταση και εκτέλεση της εφαρμογής σε μία συσκευή Android. Στην συνέχεια της παρούσας ενότητας η εφαρμογή που δοκιμάζεται θα αποκαλείται \textit{εφαρμογή υπό δοκιμή}.
 	
 		\subsubsection{Unit Testing (Δοκιμή μονάδας)}
-		Έλεγχοι τύπου unit testing χρησιμοποιούνται για την δοκιμή μικρών μεμονωμένων στοιχείων της εφαρμογής, χωρίς να εξετάζεται η αλληλεπίδραση τους με άλλα στοιχεία της εφαρμογής. Δηλαδή όπως δηλώνει και το όνομα τους, εξετάζουν τη συμπεριφορά ενός στοιχείου ως ξεχωριστή μονάδα. Για να γίνει καλύτερα αντιληπτό το παραπάνω, ας υποθέσουμε ότι θέλουμε να δοκιμάσουμε ένα κουμπί το οποίο αναμένουμε να μας μεταφέρει σε μια άλλη οθόνη.  Στα πλαίσια της δοκιμής μονάδας θα γίνει έλεγχος αν η πρόθεση (intent) για αλλαγή οθόνης δημιουργήθηκε σωστά και όχι αν μεταφερθήκαμε στην άλλη οθόνη. Σε περίπτωση όμως που εκτελούσαμε δοκιμές ενσωμάτωσης (instrumentation testing βλ. ενότητα \ref{sssec:instrumentation_testing}) θα έπρεπε να γίνει έλεγχος ότι η επόμενη οθόνη ξεκίνησε όπως αναμέναμε.
+		Έλεγχοι τύπου unit testing χρησιμοποιούνται για τη δοκιμή μικρών μεμονωμένων στοιχείων της εφαρμογής, χωρίς να εξετάζεται η αλληλεπίδραση τους με άλλα στοιχεία της εφαρμογής. Δηλαδή όπως δηλώνει και το όνομα τους, εξετάζουν τη συμπεριφορά ενός στοιχείου ως ξεχωριστή μονάδα. Για να γίνει καλύτερα αντιληπτό το παραπάνω, ας υποθέσουμε ότι θέλουμε να δοκιμάσουμε ένα κουμπί το οποίο αναμένουμε να μας μεταφέρει σε μια άλλη οθόνη.  Στα πλαίσια της δοκιμής μονάδας θα γίνει έλεγχος αν η πρόθεση (intent) για αλλαγή οθόνης δημιουργήθηκε σωστά και όχι αν μεταφερθήκαμε στην άλλη οθόνη. Σε περίπτωση όμως που εκτελούσαμε δοκιμές ενσωμάτωσης (instrumentation testing βλ. ενότητα \ref{sssec:instrumentation_testing}) θα έπρεπε να γίνει έλεγχος ότι η επόμενη οθόνη ξεκίνησε όπως αναμέναμε.
 		
 		Τα Unit tests χρησιμοποιούν το JUnit test framework και δεν πρέπει να χρησιμοποιούν λειτουργίες από το Android API έτσι ώστε να είναι σε θέση να τρέξουν στην εικονική μηχανή της Java (JVM) κάτι το οποίο απαιτεί πολύ λιγότερο χρόνο σε σχέση με τον χρόνο τον οποίο θα χρειάζονταν για να τρέξουν σε περιβάλλον Android. Κάθε εξάρτηση από το λειτουργικό Android θα πρέπει να αντικατασταθεί στον κώδικα που θέλουμε να δοκιμάσουμε με κάποιο mocking framework όπως είναι το Mockito. 
 		
@@ -608,7 +606,7 @@
 
 		Όταν θέλουμε να δοκιμάσουμε κλάσεις και λειτουργίες της εφαρμογής οι οποίες αλληλεπιδρούν με το λειτουργικό Android τότε δημιουργούμε τις λεγόμενες δοκιμές ενσωμάτωσης (instrumentation tests). Το Android API για δοκιμές παρέχει στον προγραμματιστή άγκιστρα (hooks) μέσω των οποίων μπορεί να αλληλεπιδράσει με τον κύκλο ζωής των στοιχείων λογισμικού και της εφαρμογής. Αυτά τα άγκιστρα απαρτίζουν το instrumentation API και επιτρέπουν στις δοκιμές να ελέγχουν γεγονότα από τον κύκλο ζωής (life cycle events) και την αλληλεπίδραση του χρήστη.
 
-		Υπό κανονικές συνθήκες ένα στοιχείο του Android ακολουθεί έναν κύκλο ζωής που έχει καθοριστεί από το σύστημα βάση της αλληλεπίδρασης του με τον χρήστη. Για παράδειγμα, όταν δημιουργείται μια πρόθεση (intent) για έναρξη κάποιου Activity, καλείται η μέθοδος onCreate() του εν λόγω Activity. Στην συνέχεια αν ο χρήστης ανοίξει κάποια άλλη εφαρμογή, καλείται η μέθοδος onDestroy() του Activity . Το instrumentation API αν και δεν επιτρέπει στον προγραμματιστή να καλέσει αυτές τις μεθόδους απευθείας, του επιτρέπει να εξομοιώσει πλήρως την συμπεριφορά ενός χρήστη η οποία προκαλεί τέτοια γεγονότα. Για παράδειγμα επιτρέπει στον προγραμματιστή να στείλει γεγονότα πλήκτρων ή αφής, ελέγχοντας με αυτό τον τρόπο τον κύκλο ζωής της υπό δοκιμής εφαρμογής\cite{androidTestingBook}.
+		Υπό κανονικές συνθήκες ένα στοιχείο του Android ακολουθεί έναν κύκλο ζωής που έχει καθοριστεί από το σύστημα βάση της αλληλεπίδρασης του με τον χρήστη. Για παράδειγμα, όταν δημιουργείται μια πρόθεση (intent) για έναρξη κάποιου Activity, καλείται η μέθοδος onCreate() του εν λόγω Activity. Στην συνέχεια αν ο χρήστης ανοίξει κάποια άλλη εφαρμογή, καλείται η μέθοδος onDestroy() του Activity. Το instrumentation API αν και δεν επιτρέπει στον προγραμματιστή να καλέσει αυτές τις μεθόδους απευθείας, του επιτρέπει να εξομοιώσει πλήρως τη συμπεριφορά ενός χρήστη η οποία προκαλεί τέτοια γεγονότα. Για παράδειγμα επιτρέπει στον προγραμματιστή να στείλει γεγονότα πλήκτρων ή αφής, ελέγχοντας με αυτό τον τρόπο τον κύκλο ζωής της υπό δοκιμής εφαρμογής\cite{androidTestingBook}.
 
 		Τα instrumentation tests δεν γίνεται να τρέξουν στο JVM αλλά χρειάζονται περιβάλλον με λειτουργικό σύστημα Android. Μπορούν να τρέξουν είτε σε πραγματική συσκευή Android η οποία έχει συνδεθεί με τον υπολογιστή στον οποίο γίνεται η ανάπτυξη, είτε σε εικονική συσκευή Android. Δεδομένου του πλήθους των συσκευών που τρέχουν το λειτουργικό σύστημα Android, και συνυπολογίζοντας τις διάφορες εκδόσεις που μπορεί να τρέχει κάθε συσκευή, κάθε δοκιμή θα πρέπει να γίνεται με χρήση εξομοίωσης σε διάφορα επίπεδα API αλλά και μεγέθη οθονών. Για παράδειγμα αν η εφαρμογή υποστηρίζει επίπεδο API μεγαλύτερο του 14 θα πρέπει να γίνει έλεγχος για κάθε API μεγαλύτερο του 14 με τουλάχιστον 2 διαφορετικά μεγέθη οθόνης για κάθε API. 
 		
@@ -619,7 +617,7 @@
 		\subsection{NodeJs Testing}
 		
 		
-		Για τη συγγραφή και εκτέλεση τεστ για τον κώδικα σε JavaScript χρησιμοποιήσαμε τα εργαλεία Karma και Mocha.Το Mocha είναι μια βιβλιοθήκη που επιτρέπει τον ορισμό και την εκτέλεση δοκιμών σε ένα περιβάλλον Node.js χωρίς την ανάγκη ύπαρξης ενός φυλλομετρητή. Ορίζει περισσότερα από ένα στυλ συγγραφής τεστ και μας επιτρέπει να επιλέξουμε εκείνο που ταιριάζει περισσότερο στις ανάγκες του εκάστοτε τεστ. Στην περίπτωση που θέλουμε τα τεστ να εκτελούνται σε φυλλομετρητή το Mocha μας επιτρέπει να φορτώσουμε τα τεστ σε μία HTML σελίδα και να τα εκτελέσουμε στο φυλλομετρητή.
+		Για τη συγγραφή και εκτέλεση τεστ για τον κώδικα σε JavaScript χρησιμοποιήσαμε τα εργαλεία Karma και Mocha.Το Mocha είναι μια βιβλιοθήκη που επιτρέπει τον ορισμό και την εκτέλεση δοκιμών σε ένα περιβάλλον Node.ξs χωρίς την ανάγκη ύπαρξης ενός φυλλομετρητή. Ορίζει περισσότερα από ένα στυλ συγγραφής τεστ και μας επιτρέπει να επιλέξουμε εκείνο που ταιριάζει περισσότερο στις ανάγκες του εκάστοτε τεστ. Στην περίπτωση που θέλουμε τα τεστ να εκτελούνται σε φυλλομετρητή το Mocha μας επιτρέπει να φορτώσουμε τα τεστ σε μία HTML σελίδα και να τα εκτελέσουμε στο φυλλομετρητή.
 		
 		
 		Το Chai είναι μία βιβλιοθήκη επικυρώσεων (assertion framework), η οποία συνεργάζεται άψογα με τη βιβλιοθήκη Mocha και δίνει τη δυνατότητα ορισμού των αναμενόμενων αποτελεσμάτων από κάποιο τεστ και ελέγχου κατά την εκτέλεσή του. Επίσης, όπως και το Mocha, μας επιτρέπει να διαλέξουμε από ένα σύνολο διαφορετικών στυλ για τον ορισμό των προσδοκιών. Παρατίθεται παράδειγμα τεστ γραμμένου με χρήση mocha και chai.
